# schema2class

./: LICENSE  Main.hs  README.md  in  schema2class.cabal
