name:                schema2class
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lei/schema2class#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Leiser
maintainer:          leiser.1960@gmail.com
copyright:           LICENSE
category:            nix
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable schema2class
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
